// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/automatic-tokenization.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled ant-select-tags"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-has-label ant-select-enabled ant-select-allow-clear"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection-label"
      >
        Select
      </div>
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
        >
          Please Select
        </div>
        <div
          class="ant-select-selection-selected-value"
          style="opacity:1"
        />
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-has-value ant-select-disabled ant-select-allow-clear"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
        <button
          class="ant-btn ant-select-clear ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
          style="user-select:none;-webkit-user-select:none"
          type="button"
          unselectable="unselectable"
        >
          <i
            class="icon icon-close"
          />
          <div
            class="ant-ripple-wrapper"
          />
        </button>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/combobox.md correctly 1`] = `
<div
  class="ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
      >
        Enter the account name
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:inline-block"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <i
          class="icon icon-arrow_drop_down"
        />
        <b />
      </span>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/coordinate.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-has-value ant-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="opacity:1"
          title="Zhejiang"
        >
          Zhejiang
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
  <div
    class="ant-select ant-select-has-value ant-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="opacity:1"
          title="Hangzhou"
        >
          Hangzhou
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/iconselect.md correctly 1`] = `
<div
  class="ant-icon-select ant-select ant-select-has-value ant-select-enabled"
  style="width:300px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="opacity:1"
        title="root"
      >
        <span>
          <i
            class="icon icon-root"
          />
           root
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/label-in-value.md correctly 1`] = `
<div
  class="ant-select ant-select-has-value ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="opacity:1"
        title="Lucy (101)"
      >
        Lucy (101)
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <i
          class="icon icon-arrow_drop_down"
        />
        <b />
      </span>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/multiple.md correctly 1`] = `
<div
  class="ant-select ant-select-has-label ant-select-enabled ant-select-allow-clear ant-select-multiple"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection-label"
    >
      多选用例
    </div>
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <i
          class="icon icon-arrow_drop_down"
        />
        <b />
      </span>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/optgroup.md correctly 1`] = `
<div
  class="ant-select ant-select-has-value ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <i
          class="icon icon-arrow_drop_down"
        />
        <b />
      </span>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/search.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:300px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
      >
        Select a person
      </div>
      <div
        class="ant-select-selection-selected-value"
        style="opacity:1"
      />
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <i
          class="icon icon-arrow_drop_down"
        />
        <b />
      </span>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/search-box.md correctly 1`] = `
<div
  class="ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
      >
        input search text
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:inline-block"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;

exports[`renders ./components/select/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group-wrapper"
  >
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="large"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Large
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="default"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Default
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="small"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Small
        </span>
      </label>
    </div>
  </div>
  <br />
  <br />
  <div
    class="ant-select ant-select-has-value ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="opacity:1"
          title="a1"
        >
          a1
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-has-value ant-select-combobox ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-search ant-select-search--inline"
          style="display:inline-block"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value="a1"
            />
            <span
              class="ant-select-search__field__mirror"
            >
              a1 
            </span>
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-has-value ant-select-enabled ant-select-multiple"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="unselectable"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="icon icon-highlight_off"
              />
            </span>
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="unselectable"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="icon icon-highlight_off"
              />
            </span>
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <i
            class="icon icon-arrow_drop_down"
          />
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-has-value ant-select-enabled ant-select-tags"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="unselectable"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="icon icon-highlight_off"
              />
            </span>
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="unselectable"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="icon icon-highlight_off"
              />
            </span>
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-select-underline"
    >
      <span
        class="ant-select-ripple"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/tags.md correctly 1`] = `
<div
  class="ant-select ant-select-has-label ant-select-enabled ant-select-allow-clear ant-select-tags"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection-label"
    >
      标签用例
    </div>
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
      >
        tags
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-select-underline"
  >
    <span
      class="ant-select-ripple"
    />
  </div>
</div>
`;
